--- a/src/pywifes/pipeline_params/params_extract.json5
+++ b/src/pywifes/pipeline_params/params_extract.json5
@@ -15,6 +15,8 @@
         "bkg_in_factor": 3,  // Sky annulus inner radius: bkg_in_factor * r_arcsec.
         "bkg_out_factor": 4,  // Sky annulus outer radius: bkg_out_factor * r_arcsec.
         "get_dq": true,  // Extract science aperture from DQ extension and return in output.
+        "get_tell": true,  // Extract science aperture from TelluricModel extension and return in output.
+        "get_extinct": true,  // Include the applied atmospheric extinction correction in the output.
         //
         // - "debug": false,
     },
